added a picture and border with shadow

--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my second website</title>
+    <link rel="stylesheet" href="style/beauty.css">
 </head>
 <body>
     <div>
         <h3>this is my second website</h3>
         <p>this is so easy task but i was very confused about it.</p>
+    </div>
+    <div>
+    <h2>this is my practice time in pubg at training ground</h2>
+    <img src="image/Captured20240920223423108.jpg" alt="picture is coming soon" width="650px" height="400px">
     </div>
 </body>
 </html>
